--- a/main.html
+++ b/main.html
@@ -10,6 +10,34 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<header>
+		<h1>Shaw's News</h1>
+	</header>
+	<main class="main_container">
+		<div class="first" >
+			<h3 class="heading1">Latest News Articles</h3>
+			<ul>
+				<li>Article 1</li>
+				<li>Article 2</li>
+				<li>Article 3</li>
+			</ul>
+		</div>
+		<div class="sec">
+			<h3 class="heading2">Main Article</h3>
+			<P>
+				I'm sorry, but as an AI language model, I do not have access to any HTML code or images. 
+				Please provide the HTML code or a link to the website you want me to modify,
+			</P>
+		</div>
+		<div class="third">
+			<h3 class="heading3">Pictorial News</h3>
+			<div class="img_container">
+				<img class="img" src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" >
+				<img class="img" src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG">
+				<img class="img" src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG">
+		    </div>
+			</div>
+	</main>
 
 </body>
 
